--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ Pygments==2.17.2
 pyOpenSSL==24.1.0
 redis==5.0.4
 service-identity==24.1.0
+setuptools==69.5.1
 six==1.16.0
 sqlparse==0.5.0
 stack-data==0.6.3
