--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ msgpack==1.0.8
 multidict==6.0.5
 parso==0.8.4
 pexpect==4.9.0
+pillow==10.3.0
 prompt-toolkit==3.0.43
 ptyprocess==0.7.0
 pure-eval==0.2.2
