--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = { file = "README.md", content-type = "text/markdown" }
 
 authors = [
     { name = "Blake Nall", email = "dev@darthnall.com" },
-    { name = "Constantine Kapatos", email = "koskap@gmail.com" },
+    { name = "Constantine Kapatos", email = "kapatos.constantine@gmail.com" },
 ]
 
 [tool.ruff]
