--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ asttokens==2.4.1
 attrs==23.2.0
 autobahn==23.6.2
 Automat==22.10.0
+boto3==1.34.110
+botocore==1.34.110
 cffi==1.16.0
 channels==4.1.0
 channels-redis==4.2.0
@@ -17,6 +19,7 @@ Django==5.0.4
 django-discord-py==2023.301.243
 django-extensions==3.2.3
 django-split-settings==1.3.1
+django-storages==1.14.3
 executing==2.0.1
 frozenlist==1.4.1
 hyperlink==21.0.0
@@ -24,6 +27,7 @@ idna==3.7
 incremental==22.10.0
 ipython==8.23.0
 jedi==0.19.1
+jmespath==1.0.1
 matplotlib-inline==0.1.7
 msgpack==1.0.8
 multidict==6.0.5
@@ -38,7 +42,9 @@ pyasn1_modules==0.4.0
 pycparser==2.22
 Pygments==2.17.2
 pyOpenSSL==24.1.0
+python-dateutil==2.9.0.post0
 redis==5.0.4
+s3transfer==0.10.1
 service-identity==24.1.0
 setuptools==69.5.1
 six==1.16.0
@@ -48,6 +54,7 @@ traitlets==5.14.3
 Twisted==24.3.0
 txaio==23.1.1
 typing_extensions==4.11.0
+urllib3==2.2.1
 wcwidth==0.2.13
 yarl==1.9.4
 zope.interface==6.3
