--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,12 @@ daphne==4.1.2
 decorator==5.1.1
 discord.py==2.3.2
 Django==5.0.4
+django-browser-reload==1.12.1
 django-discord-py==2023.301.243
 django-extensions==3.2.3
 django-split-settings==1.3.1
 django-storages==1.14.3
+django-tailwind==3.8.0
 executing==2.0.1
 frozenlist==1.4.1
 hyperlink==21.0.0
