--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
 aiohttp==3.9.5
 aiosignal==1.3.1
+arrow==1.3.0
 asgiref==3.8.1
 asttokens==2.4.1
 attrs==23.2.0
 autobahn==23.6.2
 Automat==22.10.0
+binaryornot==0.4.4
 boto3==1.34.110
 botocore==1.34.110
+certifi==2024.6.2
 cffi==1.16.0
 channels==4.1.0
 channels-redis==4.2.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
 constantly==23.10.4
+cookiecutter==2.6.0
 cryptography==42.0.5
 daphne==4.1.2
 decorator==5.1.1
@@ -29,8 +36,12 @@ idna==3.7
 incremental==22.10.0
 ipython==8.23.0
 jedi==0.19.1
+Jinja2==3.1.4
 jmespath==1.0.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 matplotlib-inline==0.1.7
+mdurl==0.1.2
 msgpack==1.0.8
 multidict==6.0.5
 parso==0.8.4
@@ -45,16 +56,22 @@ pycparser==2.22
 Pygments==2.17.2
 pyOpenSSL==24.1.0
 python-dateutil==2.9.0.post0
+python-slugify==8.0.4
+PyYAML==6.0.1
 redis==5.0.4
+requests==2.32.3
+rich==13.7.1
 s3transfer==0.10.1
 service-identity==24.1.0
 setuptools==69.5.1
 six==1.16.0
 sqlparse==0.5.0
 stack-data==0.6.3
+text-unidecode==1.3
 traitlets==5.14.3
 Twisted==24.3.0
 txaio==23.1.1
+types-python-dateutil==2.9.0.20240316
 typing_extensions==4.11.0
 urllib3==2.2.1
 wcwidth==0.2.13
