--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,6 +25,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Set Fernet encryption key
+        id: set_key
+        run: |
+          python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())" > key.txt
+          echo "ECOM_ENCRYPTION_KEY=$(cat key.txt)" >> $GITHUB_ENV
+
     - name: Run Tests
       run: |
         python manage.py test
