--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ Django==5.0.4
 django-browser-reload==1.12.1
 django-discord-py==2023.301.243
 django-extensions==3.2.3
+django-htmx==1.18.0
 django-split-settings==1.3.1
 django-storages==1.14.3
 django-tailwind==3.8.0
