--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Automat==22.10.0
 binaryornot==0.4.4
 boto3==1.34.110
 botocore==1.34.110
+build==1.2.1
 certifi==2024.6.2
 cffi==1.16.0
 channels==4.1.0
@@ -22,6 +23,7 @@ cryptography==42.0.5
 daphne==4.1.2
 decorator==5.1.1
 discord.py==2.3.2
+distlib==0.3.8
 Django==5.0.4
 django-browser-reload==1.12.1
 django-discord-py==2023.301.243
@@ -30,24 +32,38 @@ django-htmx==1.18.0
 django-split-settings==1.3.1
 django-storages==1.14.3
 django-tailwind==3.8.0
+docutils==0.21.2
 executing==2.0.1
+filelock==3.15.4
 frozenlist==1.4.1
 hyperlink==21.0.0
 idna==3.7
+importlib_metadata==8.0.0
 incremental==22.10.0
 ipython==8.23.0
+jaraco.classes==3.4.0
+jaraco.context==5.3.0
+jaraco.functools==4.0.1
 jedi==0.19.1
+jeepney==0.8.0
 Jinja2==3.1.4
 jmespath==1.0.1
+keyring==25.2.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.7
 mdurl==0.1.2
+more-itertools==10.3.0
 msgpack==1.0.8
 multidict==6.0.5
+nh3==0.2.17
+packaging==24.1
 parso==0.8.4
 pexpect==4.9.0
 pillow==10.3.0
+pipenv==2024.0.1
+pkginfo==1.10.0
+platformdirs==4.2.2
 prompt-toolkit==3.0.43
 psycopg==3.1.19
 ptyprocess==0.7.0
@@ -57,25 +73,33 @@ pyasn1_modules==0.4.0
 pycparser==2.22
 Pygments==2.17.2
 pyOpenSSL==24.1.0
+pyproject_hooks==1.1.0
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
 PyYAML==6.0.1
+readme_renderer==43.0
 redis==5.0.4
 requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
 rich==13.7.1
 s3transfer==0.10.1
+SecretStorage==3.3.3
 service-identity==24.1.0
-setuptools==69.5.1
+setuptools==70.2.0
 six==1.16.0
 sqlparse==0.5.0
 stack-data==0.6.3
 text-unidecode==1.3
 traitlets==5.14.3
+twine==5.1.1
 Twisted==24.3.0
 txaio==23.1.1
 types-python-dateutil==2.9.0.20240316
 typing_extensions==4.11.0
 urllib3==2.2.2
+virtualenv==20.26.3
 wcwidth==0.2.13
 yarl==1.9.4
+zipp==3.19.2
 zope.interface==6.3
