--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ attrs==23.2.0
 autobahn==23.6.2
 Automat==22.10.0
 binaryornot==0.4.4
-boto3==1.34.110
-botocore==1.34.110
+boto3==1.34.144
+botocore==1.34.144
 build==1.2.1
 certifi==2024.7.4
 cffi==1.16.0
@@ -20,19 +20,20 @@ click==8.1.7
 colorama==0.4.6
 constantly==23.10.4
 cookiecutter==2.6.0
-cryptography==42.0.5
+cryptography==42.0.8
 cssbeautifier==1.15.1
 daphne==4.1.2
 decorator==5.1.1
-discord.py==2.3.2
+discord.py==2.4.0
 distlib==0.3.8
-Django==5.0.4
-django-browser-reload==1.12.1
+Django==5.0.7
+django-browser-reload==1.13.0
 django-discord-py==2023.301.243
 django-extensions==3.2.3
 django-htmx==1.18.0
-django-split-settings==1.3.1
-django-storages==1.14.3
+django-oauth-toolkit==2.4.0
+django-split-settings==1.3.2
+django-storages==1.14.4
 django-tailwind==3.8.0
 djlint==1.34.1
 docutils==0.21.2
@@ -46,7 +47,7 @@ hyperlink==21.0.0
 idna==3.7
 importlib_metadata==8.0.0
 incremental==22.10.0
-ipython==8.23.0
+ipython==8.26.0
 jaraco.classes==3.4.0
 jaraco.context==5.3.0
 jaraco.functools==4.0.1
@@ -56,6 +57,7 @@ Jinja2==3.1.4
 jmespath==1.0.1
 jsbeautifier==1.15.1
 json5==0.9.25
+jwcrypto==1.5.6
 keyring==25.2.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -64,39 +66,42 @@ mdurl==0.1.2
 more-itertools==10.3.0
 msgpack==1.0.8
 multidict==6.0.5
-nh3==0.2.17
+nh3==0.2.18
+oauthlib==3.2.2
 packaging==24.1
 parso==0.8.4
 pathspec==0.12.1
 pexpect==4.9.0
-pillow==10.3.0
+pillow==10.4.0
+pip-review==1.3.0
 pipenv==2024.0.1
-pkginfo==1.10.0
+pkginfo==1.11.1
 platformdirs==4.2.2
-prompt-toolkit==3.0.43
-psycopg==3.1.19
+prompt_toolkit==3.0.47
+psycopg==3.2.1
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
-Pygments==2.17.2
+Pygments==2.18.0
 pyOpenSSL==24.1.0
 pyproject_hooks==1.1.0
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
+pytz==2024.1
 PyYAML==6.0.1
-readme_renderer==43.0
-redis==5.0.4
-regex==2023.12.25
+readme_renderer==44.0
+redis==5.0.7
+regex==2024.5.15
 requests==2.32.3
 requests-toolbelt==1.0.0
 rfc3986==2.0.0
 rich==13.7.1
-s3transfer==0.10.1
+s3transfer==0.10.2
 SecretStorage==3.3.3
 service-identity==24.1.0
-setuptools==70.2.0
+setuptools==70.3.0
 six==1.16.0
 sqlparse==0.5.0
 stack-data==0.6.3
@@ -107,10 +112,10 @@ twine==5.1.1
 Twisted==24.3.0
 txaio==23.1.1
 types-python-dateutil==2.9.0.20240316
-typing_extensions==4.11.0
+typing_extensions==4.12.2
 urllib3==2.2.2
 virtualenv==20.26.3
 wcwidth==0.2.13
 yarl==1.9.4
 zipp==3.19.2
-zope.interface==6.3
+zope.interface==6.4.post2
