--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ django-oauth-toolkit==2.4.0
 django-split-settings==1.3.2
 django-storages==1.14.4
 django-tailwind==3.8.0
-djlint==1.34.1
+djlint
 docutils==0.21.2
 EditorConfig==0.12.4
 executing==2.0.1
@@ -93,7 +93,7 @@ pytz==2024.1
 PyYAML==6.0.1
 readme_renderer==44.0
 redis==5.0.7
-regex==2024.5.15
+regex
 requests==2.32.3
 requests-toolbelt==1.0.0
 rfc3986==2.0.0
@@ -108,7 +108,6 @@ stack-data==0.6.3
 text-unidecode==1.3
 tqdm==4.66.4
 traitlets==5.14.3
-twine==5.1.1
 Twisted==24.3.0
 txaio==23.1.1
 types-python-dateutil==2.9.0.20240316
